<resources>
    <string name="titulo">DogApp</string>
    <string name="tituloAdministradorCitas">Administrador de citas.</string>
    <string name="Cita">Nueva Cita.</string>
    <string name="editCita">Editar Cita.</string>
    <string name="nombre_mascota">Nombre de la mascota</string>
    <string name="nombre_propietatio">Nombre del propietario</string>
    <string name="raza">Raza</string>
    <string name="telefono">Telefono</string>
    <string name="pagina_anterior">icono pagina anterior</string>
    <string name="campo_texto_info">Campo de texto para ingresar info</string>
    <string name="guardar">Guardar cita</string>
    <string name="app_name">dogApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Registrate</string>

    <string-array name="sintomasMascota">

        <item>sintomas</item>
        <item>tiene garrapatas</item>
        <item>Solo duerme</item>
        <item>No come</item>
        <item>Fractura extremidad</item>
        <item>Tiene pulgas</item>
        <item>Bota demasiado pelo</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>