<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.AddFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.13"
            />


        <androidx.appcompat.widget.Toolbar
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:background="@drawable/toolbar"
            app:layout_constraintBottom_toBottomOf="@id/guide1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/tvAnterior"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/boton_atras"
                    android:scaleType="fitCenter" />

                <TextView
                    android:id="@+id/tvCita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/tommy_bold"
                    android:text="@string/Cita"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etNombreMascota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="48dp"
            android:hint="@string/nombre_mascota"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxStrokeColor="@color/morado"
            app:hintTextColor="@color/gris_oscuro"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/guide1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvNombreRaza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAccessibility="yes"
                android:inputType="text"
                android:textColor="@color/gris_oscuro" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvRazainput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="35dp"
            android:hint="@string/raza"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxStrokeColor="@color/morado"
            app:hintTextColor="@color/gris_oscuro"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/etNombreMascota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <AutoCompleteTextView
                android:id="@+id/tvRazaEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:inputType="text"
                android:textColor="@color/gris_oscuro"
                android:importantForAccessibility="yes"
                android:completionThreshold="2"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etNombrePropietario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="35dp"
            android:hint="@string/nombre_propietatio"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxStrokeColor="@color/morado"
            app:hintTextColor="@color/gris_oscuro"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvRazainput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombrePropietarioText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAccessibility="yes"
                android:inputType="text"
                android:textColor="@color/gris_oscuro" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etTelefono"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="35dp"
            android:hint="@string/telefono"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxStrokeColor="@color/morado"
            app:hintTextColor="@color/gris_oscuro"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/etNombrePropietario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTelfonoEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/gris_oscuro"
                android:importantForAccessibility="yes"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/sintomasMascota"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="16dp"
            android:importantForAccessibility="yes"
            android:spinnerMode="dropdown"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/etTelefono"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:textColor="@color/black"
            android:drawableStart="@drawable/icon_save"
            android:drawablePadding="8dp"
            android:backgroundTint="@color/rosado"
            app:layout_constraintTop_toBottomOf="@id/sintomasMascota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>